[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = "0.7"

# Tokio 运行时，启用 signal
tokio = { version = "1.47", features = ["full", "signal"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT 认证
jsonwebtoken = "9.3.1"

# 限流
governor = "0.6"
nonzero_ext = "0.3"
once_cell = "1.19"

# 日志 & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 错误处理
anyhow = "1.0"
thiserror = "1"

# 配置
dotenvy = "0.15.7"
config = "0.15.16"

# prometheus
prometheus = "0.14.0"
